k8/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        # IMPORTANT: You must build this image first (see instructions below)
        image: learniva-server:latest 
        imagePullPolicy: Never # Use the local image from Docker Desktop
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  ports:
  - port: 3000
    targetPort: 3000
  type: LoadBalancer # Exposes to localhost:3000
