k8/deployment.yaml
# 1. SERVER DEPLOYMENT & SERVICE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: "2401205"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: 127.0.0.1:30085/2401205_learniva/text-emotion-detection:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: "2401205"
spec:
  selector:
    app: server
  ports:
  - port: 3000
    targetPort: 3000
  type: LoadBalancer


---


# 2. CLIENT DEPLOYMENT & SERVICE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: "2401205"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: 127.0.0.1:30085/2401205_learniva/learniva-client:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: "2401205"
spec:
  selector:
    app: client
  ports:
  - port: 5173
    targetPort: 80
  type: LoadBalancer

---

# 3. INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learniva-ingress
  namespace: "2401205"
spec:
  ingressClassName: nginx
  rules:
    - host: learniva.imcc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 5173
