k8/ingress.yaml

apiVersion: networking.k8.io/v1
kind: Ingress
metadata:
  name: learniva-ingress
  namespace: "2401205"  # 👈 CHANGED: Matches your project namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: learniva.imcc.com  # 👈 You can change this domain if needed
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service # 👈 CHANGED: Points to your React Frontend
                port:
                  number: 3000       # 👈 Matches the port in your client-service
